[package]
name = "PlayBGMonTitleScreen"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
the_csk_collection_api = { git = "https://github.com/Coolsonickirby/the_csk_collection_api.git" }
serde = { version = "1", features = ["derive"] }
toml = "0.5.9"
anyhow = "1.0.72"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true